2024-12-29T01:49:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12531480434 # 524
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-29
* notice: last 14d: unq all: 3 1705
* notice: prev accum: outdated-unq outdated-all / unq all: 2345 237342 / 2363 239114
* notice: next accum: outdated-unq outdated-all / unq all: 2346 237469 / 2364 239242
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -68 / +1 +126 -0 -0 / 1 126
* notice: removed / changed dates: [2024-12-14] / [2024-12-15 2024-12-27 2024-12-28]

2024-12-28T01:39:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12522653555 # 523
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-28
* notice: last 14d: unq all: 3 1697
* notice: prev accum: outdated-unq outdated-all / unq all: 2344 237218 / 2362 238988
* notice: next accum: outdated-unq outdated-all / unq all: 2345 237342 / 2363 239114
* notice: prev exec diff / last date diff / accum: unq all: +1 +126 -0 -75 / +1 +126 -0 -0 / 1 126
* notice: removed / changed dates: [2024-12-13] / [2024-12-14 2024-12-27]

2024-12-27T01:41:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12510495960 # 522
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-27
* notice: last 14d: unq all: 3 1695
* notice: prev accum: outdated-unq outdated-all / unq all: 2343 237094 / 2361 238858
* notice: next accum: outdated-unq outdated-all / unq all: 2344 237218 / 2362 238988
* notice: prev exec diff / last date diff / accum: unq all: +1 +130 -0 -75 / +1 +128 -0 -0 / 1 128
* notice: removed / changed dates: [2024-12-12] / [2024-12-13 2024-12-25 2024-12-26]

2024-12-26T01:41:11Z: