@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-12-29T01:49:58Z",
-  "count_outdated" : 237469,
-  "uniques_outdated" : 2346,
-  "count" : 239242,
-  "uniques" : 2364,
+  "timestamp" : "2024-12-30T01:44:58Z",
+  "count_outdated" : 237595,
+  "uniques_outdated" : 2347,
+  "count" : 239396,
+  "uniques" : 2367,
   "clones" : [
     {
-      "timestamp": "2024-12-15T00:00:00Z",
-      "count": 58,
-      "count_minmax": [ 17, 126 ],
-      "count_decinc": [ 68, 126 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-12-16T00:00:00Z",
-      "count": 123,
+      "count": 51,
       "count_minmax": [ 19, 123 ],
-      "count_decinc": [ 0, 123 ],
+      "count_decinc": [ 72, 123 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,9 +115,27 @@
     },
     {
       "timestamp": "2024-12-28T00:00:00Z",
+      "count": 128,
+      "count_minmax": [ 126, 128 ],
+      "count_decinc": [ 0, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-29T00:00:00Z",
       "count": 126,
       "count_minmax": [ 126, 126 ],
       "count_decinc": [ 0, 126 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-12-30T00:00:00Z",
+      "count": 26,
+      "count_minmax": [ 26, 26 ],
+      "count_decinc": [ 0, 26 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
