@@ -1,15 +1,10 @@
 {
-  "count": 1705,
+  "count": 1729,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-12-15T00:00:00Z",
-      "count": 58,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-12-16T00:00:00Z",
-      "count": 123,
+      "count": 51,
       "uniques": 1
     },
     {
@@ -69,7 +64,17 @@
     },
     {
       "timestamp": "2024-12-28T00:00:00Z",
+      "count": 128,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-29T00:00:00Z",
       "count": 126,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-12-30T00:00:00Z",
+      "count": 26,
       "uniques": 1
     }
   ]
