@@ -1,3 +1,12 @@
+2024-12-30T01:44:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12540595565 # 525
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
+* notice: last 14d: unq all: 3 1729
+* notice: prev accum: outdated-unq outdated-all / unq all: 2346 237469 / 2364 239242
+* notice: next accum: outdated-unq outdated-all / unq all: 2347 237595 / 2367 239396
+* notice: prev exec diff / last date diff / accum: unq all: +3 +154 -0 -72 / +1 +26 -0 -0 / 1 26
+* notice: removed / changed dates: [2024-12-15] / [2024-12-16 2024-12-28 2024-12-29 2024-12-30]
+
 2024-12-29T01:49:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12531480434 # 524
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-29
